# artwork-breath

./: CMakeLists.txt  Readme.md
Ghost/: CMakeLists.txt
Ghost/assets/: .directory
Ghost/gtk-3.0/: gtk.css
breath/icons/: .directory
ghost/: CMakeLists.txt
konsole/: Manjaro Strit.profile  Manjaro-Strit.profile
lookandfeel/: metadata.desktop
lookandfeel/contents/: defaults
lookandfeel/contents/components/artwork/: background.png~
sddm-theme/: metadata.desktop
